--- a/src/components/slider/styles.scss
+++ b/src/components/slider/styles.scss
@@ -1,5 +1,22 @@
 .container{
-  width: 100%;
-  height: 100px; 
-  margin: 10px;
+  margin: 15px 0;
+}
+.slider{
+  margin: 15px 0;
+}
+.labelContainer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  span{
+    display: block;
+    color:white;
+    padding: 10px;
+    min-width: 130px;
+    text-align: center;
+    &.value{
+      border: white 1px solid;
+      font-size: 1.5rem;
+    }
+  }
 }
